# open-webdriver

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  install.sh  install_dev.sh  lint  make_venv.py  pyproject.toml  requirements.nuitka.txt  requirements.testing.txt  requirements.txt  setup.py  test  tox.ini  upload_package.sh
.github/workflows/: lint.yml  python-publish.yml  test_macos.yml  test_macos_m1.yml  test_macos_nuitka.yml  test_ubuntu.yml  test_ubuntu_install.yml  test_ubuntu_nuitka.yml  test_win.yml  test_win_nuitka.yml
browsers/: version.txt
chromium/: 7z_linux  7za  version.txt
open_webdriver/: __init__.py  demo_app.py  download_chromium.py  main.py  open_webdriver.py  path.py  version.py
open_webdriver/tests/nuitka/: test_binary_build.py
open_webdriver/tests/unit/: cmd_test.py  test_concurrent_webdriver.py  test_osenv.py  test_webdriver.py
src/open_webdriver/: demo_app.py  download_chromium2.py  main.py  path.py
src/open_webdriver/tests/nuitka/: test_binary_build.py
src/open_webdriver/tests/unit/: cmd_test.py  test_concurrent_webdriver.py  test_osenv.py  test_webdriver.py
tests/nuitka/: test_binary_build.py
tests/nuitka/test_data/: demo_app.py
tests/unit/: test_webdriver.py
